[feat] 주소 표시 UI 변경 #5

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,36 +17,70 @@
 
 		<fragment
 			android:id="@+id/map"
+			android:name="com.naver.maps.map.MapFragment"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:name="com.naver.maps.map.MapFragment"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			tools:ignore="FragmentTagUsage" />
 
-		<Button
-			android:id="@+id/btn_main"
-			android:layout_width="wrap_content"
+		<FrameLayout
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_margin="15dp"
-			android:text="@{viewModel.btnText}"
-			android:visibility="@{viewModel.btnVisibility ? View.VISIBLE: View.INVISIBLE}"
-			android:onClick="onMainClick"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toStartOf="@+id/btn_cancel" />
+			android:visibility="@{viewModel.addressVisibility ? View.VISIBLE: View.INVISIBLE}"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent">
 
-		<Button
-			android:id="@+id/btn_cancel"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_margin="15dp"
-			android:text="@string/btn_cancel"
-			android:visibility="@{viewModel.btnVisibility ? View.VISIBLE: View.INVISIBLE}"
-			android:onClick="onCancelClick"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent" />
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="28dp"
+				android:paddingBottom="20dp"
+				android:background="@color/colorCardBack"
+				android:orientation="horizontal" >
+
+				<TextView
+					android:id="@+id/tv_address"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:layout_margin="8dp"
+					android:text="@{viewModel.addressText}"
+					android:textColor="@android:color/black"
+					android:textStyle="bold"
+					android:textSize="16sp" />
+
+				<ImageButton
+					android:id="@+id/btn_cancel"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="8dp"
+					android:layout_marginEnd="8dp"
+					android:src="@drawable/ic_close"
+					android:background="@android:color/transparent"
+					android:onClick="onCancelClick"
+					android:contentDescription="@string/btn_cancel" />
+
+			</LinearLayout>
+
+			<com.google.android.material.floatingactionbutton.FloatingActionButton
+				android:id="@+id/fab"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginEnd="30dp"
+				android:layout_gravity="bottom|end"
+				android:backgroundTint="@android:color/holo_orange_light"
+				android:src="@{viewModel.isSavedMarker() ? @drawable/ic_delete : @drawable/ic_add}"
+				android:onClick="onMainClick"
+				app:borderWidth="0dp"
+				app:fabSize="normal"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"/>
+
+		</FrameLayout>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
