--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,87 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:bind="http://schemas.android.com/apk/res-auto">
 
 	<data>
 		<import type="android.view.View" />
+		<variable name="markerCount" type="Integer" />
 		<variable
 			name="viewModel"
 			type="com.foreknowledge.navermaptest.viewmodel.MapViewModel" />
 	</data>
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		tools:context=".ui.MainActivity">
 
-		<fragment
-			android:id="@+id/map"
-			android:name="com.naver.maps.map.MapFragment"
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:ignore="FragmentTagUsage" />
+			android:layout_height="match_parent">
 
-		<FrameLayout
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:visibility="@{viewModel.addressVisibility ? View.VISIBLE: View.INVISIBLE}"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent">
+			<fragment
+				android:id="@+id/map"
+				android:name="com.naver.maps.map.MapFragment"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"
+				tools:ignore="FragmentTagUsage" />
 
-			<LinearLayout
+			<FrameLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginBottom="28dp"
-				android:paddingBottom="20dp"
-				android:background="@color/colorCardBack"
-				android:orientation="horizontal" >
+				android:visibility="@{viewModel.addressVisibility ? View.VISIBLE: View.INVISIBLE}"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintEnd_toEndOf="parent">
 
-				<TextView
-					android:id="@+id/tv_address"
-					android:layout_width="0dp"
+				<LinearLayout
+					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:layout_margin="8dp"
-					android:text="@{viewModel.addressText}"
-					android:textColor="@android:color/black"
-					android:textStyle="bold"
-					android:textSize="16sp" />
+					android:layout_marginBottom="28dp"
+					android:paddingBottom="20dp"
+					android:background="@color/colorCardBack"
+					android:orientation="horizontal" >
 
-				<ImageButton
-					android:id="@+id/btn_cancel"
+					<TextView
+						android:id="@+id/tv_address"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:layout_margin="8dp"
+						android:text="@{viewModel.addressText}"
+						android:textColor="@android:color/black"
+						android:textStyle="bold"
+						android:textSize="16sp" />
+
+					<ImageButton
+						android:id="@+id/btn_cancel"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="8dp"
+						android:layout_marginEnd="8dp"
+						android:src="@drawable/ic_close"
+						android:background="@android:color/transparent"
+						android:contentDescription="@string/btn_cancel"
+						android:onClick="cancelClick" />
+
+				</LinearLayout>
+
+				<com.google.android.material.floatingactionbutton.FloatingActionButton
+					android:id="@+id/fab"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginTop="8dp"
-					android:layout_marginEnd="8dp"
-					android:src="@drawable/ic_close"
-					android:background="@android:color/transparent"
-					android:onClick="onCancelClick"
-					android:contentDescription="@string/btn_cancel" />
+					android:layout_marginEnd="30dp"
+					android:layout_gravity="bottom|end"
+					android:backgroundTint="@android:color/holo_orange_light"
+					android:src="@{viewModel.isSavedMarker() ? @drawable/ic_delete : @drawable/ic_add}"
+					android:onClick="fabClick"
+					app:borderWidth="0dp"
+					app:fabSize="normal"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"/>
 
-			</LinearLayout>
+			</FrameLayout>
 
-			<com.google.android.material.floatingactionbutton.FloatingActionButton
-				android:id="@+id/fab"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginEnd="30dp"
-				android:layout_gravity="bottom|end"
-				android:backgroundTint="@android:color/holo_orange_light"
-				android:src="@{viewModel.isSavedMarker() ? @drawable/ic_delete : @drawable/ic_add}"
-				android:onClick="onMainClick"
-				app:borderWidth="0dp"
-				app:fabSize="normal"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
 
-		</FrameLayout>
+		<!-- Adding bottom sheet after main content -->
+		<include layout="@layout/bottom_sheet"
+			bind:markerCount="@{markerCount}"/>
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
