--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
 	<color name="colorAccent">#03DAC5</color>
 
 	<color name="colorCardBack">#FAFAFA</color>
+	<color name="colorIvory">#EFDBCB</color>
 </resources>
