--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -4,13 +4,13 @@
 
 	<data>
 		<import type="android.view.View" />
-		<variable name="markerCount" type="Integer" />
+		<variable name="placeCount" type="Integer" />
 	</data>
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:id="@+id/bottom_sheet"
 		android:layout_width="match_parent"
-		android:layout_height="400dp"
+		android:layout_height="350dp"
 		android:layout_marginStart="10dp"
 		android:layout_marginEnd="10dp"
 		app:behavior_hideable="false"
@@ -47,7 +47,7 @@
 			android:text="@string/text_no_marker"
 			android:textSize="18sp"
 			android:textStyle="bold"
-			android:visibility="@{markerCount == 0 ? View.VISIBLE : View.INVISIBLE}"
+			android:visibility="@{placeCount == 0 ? View.VISIBLE : View.INVISIBLE}"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
