[feat] BottomSheet UI 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
 	<color name="colorAccent">#03DAC5</color>
 
 	<color name="colorCardBack">#FAFAFA</color>
-	<color name="colorIvory">#EFDBCB</color>
+	<color name="colorPlaceBack">#C4CDB8F3</color>
 </resources>
