--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
 		<import type="android.view.View" />
@@ -27,17 +28,28 @@
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/marker_list"/>
+			app:layout_constraintBottom_toTopOf="@id/card_view"/>
 
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/marker_list"
+		<androidx.cardview.widget.CardView
+			android:id="@+id/card_view"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
-			android:background="@color/colorIvory"
+			android:backgroundTint="@color/colorPlaceBack"
+			app:cardCornerRadius="20dp"
+			app:cardElevation="0dp"
 			app:layout_constraintTop_toBottomOf="@+id/bar"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent" />
+			app:layout_constraintStart_toStartOf="parent">
+
+			<androidx.recyclerview.widget.RecyclerView
+				android:id="@+id/place_list"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:padding="5dp"
+				tools:listitem="@layout/item_place"/>
+
+		</androidx.cardview.widget.CardView>
 
 		<TextView
 			android:layout_width="wrap_content"
@@ -51,7 +63,7 @@
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="@+id/marker_list" />
+			app:layout_constraintTop_toTopOf="@+id/card_view" />
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
