--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/item_list"
+<LinearLayout
+	android:id="@+id/item_place"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:padding="7dp"
