--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -8,39 +8,22 @@
 		<variable name="placeCount" type="Integer" />
 	</data>
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<FrameLayout
 		android:id="@+id/bottom_sheet"
 		android:layout_width="match_parent"
-		android:layout_height="350dp"
+		android:layout_height="330dp"
 		android:layout_marginStart="10dp"
 		android:layout_marginEnd="10dp"
 		app:behavior_hideable="false"
-		app:behavior_peekHeight="25dp"
+		app:behavior_peekHeight="50dp"
 		app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-		<View
-			android:id="@+id/bar"
-			android:layout_width="0dp"
-			android:layout_height="5dp"
-			android:layout_margin="10dp"
-			android:background="@android:color/black"
-			app:layout_constraintWidth_percent="0.333"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/card_view"/>
-
 		<androidx.cardview.widget.CardView
-			android:id="@+id/card_view"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
 			android:backgroundTint="@color/colorPlaceBack"
 			app:cardCornerRadius="20dp"
-			app:cardElevation="0dp"
-			app:layout_constraintTop_toBottomOf="@+id/bar"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent">
+			app:cardElevation="0dp">
 
 			<androidx.recyclerview.widget.RecyclerView
 				android:id="@+id/place_list"
@@ -59,12 +42,8 @@
 			android:text="@string/text_no_place"
 			android:textSize="18sp"
 			android:textStyle="bold"
-			android:visibility="@{placeCount == 0 ? View.VISIBLE : View.INVISIBLE}"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="@+id/card_view" />
+			android:visibility="@{placeCount == 0 ? View.VISIBLE : View.INVISIBLE}" />
 
-	</androidx.constraintlayout.widget.ConstraintLayout>
+	</FrameLayout>
 
 </layout>
